# swc_problem_repro

./: Cargo.toml  README.md  package.json
src/: lib.rs
